--- a/app/src/main/res/layout/activity_exchange_handler.xml
+++ b/app/src/main/res/layout/activity_exchange_handler.xml
@@ -12,12 +12,14 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:tabMode="fixed"
-        app:tabGravity="fill"/>
+        app:tabGravity="fill"
+        android:background="@drawable/custom_view_holder_7"/>
 
     <androidx.viewpager2.widget.ViewPager2
         android:id="@+id/exchangeViewPager"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"/>
+        android:layout_weight="1"
+        android:background="@drawable/custom_view_holder_7"/>
 
 </LinearLayout>
