--- a/app/src/main/res/layout/activity_handle_user_sign_in.xml
+++ b/app/src/main/res/layout/activity_handle_user_sign_in.xml
@@ -1,33 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="350dp"
-    android:layout_height="350dp"
-    android:orientation="vertical"
-    android:layout_gravity="center"
-    tools:context=".Handlers.UserHandling.HandleUserSignIn">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context=".Handlers.UserHandling.HandleUserSignIn"
+    android:background="@drawable/custom_background_image">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+    <LinearLayout
+        android:layout_width="350dp"
+        android:layout_height="380dp"
+        android:orientation="vertical"
         android:layout_gravity="center"
-        android:text="Continue by using your google account?"
-        android:textSize="19sp"/>
+        android:padding="25dp"
+        android:background="@color/transparent">
 
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="50dp"
-        android:layout_marginTop="50dp"
-        android:src="@drawable/google_logo"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text="Continue by using your google account?"
+            android:textSize="19sp"
+            android:textAlignment="center"/>
 
-    <Button
-        android:id="@+id/googleSignInBtn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="125dp"
-        android:text="Continue"
-        android:textSize="18sp"
-        android:layout_gravity="center_horizontal"/>
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="50dp"
+            android:layout_marginTop="50dp"
+            android:src="@drawable/google_logo"/>
 
-</LinearLayout>
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/googleSignInBtn"
+            android:layout_width="150dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="125dp"
+            android:text="Continue"
+            android:textSize="18sp"
+            android:background="@drawable/custom_button"/>
+
+    </LinearLayout>
+</FrameLayout>
