--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -4,13 +4,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ProfileActivity">
+    tools:context=".ProfileActivity"
+    android:background="@drawable/custom_background_image">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:background="@color/transparent">
 
         <ImageView
             android:id="@+id/profileImage"
@@ -38,22 +40,21 @@
             android:text="EMAIL_ADDRESS"/>
 
         <View
-            android:layout_width="match_parent"
+            android:layout_width="310dp"
             android:layout_height="5dp"
             android:layout_marginTop="10dp"
             android:layout_marginBottom="10dp"
             android:layout_marginStart="15dp"
             android:layout_marginEnd="15dp"
-            android:background="@color/red">
+            android:background="@drawable/custom_view_holder">
         </View>
 
-        <androidx.cardview.widget.CardView
+        <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:elevation="15dp"
             android:layout_marginStart="15dp"
-            android:layout_marginEnd="15dp"
-            app:cardCornerRadius="15dp">
+            android:layout_marginEnd="15dp">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -63,40 +64,43 @@
 
                 <RelativeLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/custom_view_holder_6">
 
                     <TextView
                         android:id="@+id/addNewUserText"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="12dp"
+                        android:layout_marginTop="22dp"
                         android:layout_marginStart="15dp"
                         android:layout_gravity="start"
                         android:textSize="20sp"
                         android:text="Account sub-users"/>
 
-                    <Button
+                    <androidx.appcompat.widget.AppCompatButton
                         android:id="@+id/addNewUserButton"
                         android:layout_width="90dp"
-                        android:layout_height="45dp"
-                        android:layout_marginTop="5dp"
+                        android:layout_height="40dp"
+                        android:layout_marginTop="15dp"
                         android:layout_marginStart="90dp"
                         android:layout_marginEnd="15dp"
                         android:text="Add"
                         android:textSize="16dp"
                         android:textAlignment="center"
-                        android:layout_toEndOf="@+id/addNewUserText"/>
+                        android:layout_toEndOf="@+id/addNewUserText"
+                        android:background="@drawable/custom_button"/>
 
                     <View
                         android:id="@+id/profileSeparatorOne"
-                        android:layout_width="match_parent"
+                        android:layout_width="310dp"
                         android:layout_height="5dp"
                         android:layout_below="@id/addNewUserButton"
-                        android:layout_marginTop="5dp"
-                        android:layout_marginBottom="10dp"
+                        android:layout_marginTop="15dp"
+                        android:layout_marginBottom="15dp"
                         android:layout_marginEnd="15dp"
                         android:layout_marginStart="15dp"
-                        android:background="@color/red">
+                        android:layout_centerHorizontal="true"
+                        android:background="@drawable/custom_view_holder">
                     </View>
 
                     <androidx.recyclerview.widget.RecyclerView
@@ -106,6 +110,7 @@
                         android:layout_marginBottom="10dp"
                         android:layout_marginStart="15dp"
                         android:layout_marginEnd="15dp"
+                        android:padding="10dp"
                         android:layout_below="@id/profileSeparatorOne">
                     </androidx.recyclerview.widget.RecyclerView>
 
@@ -123,7 +128,7 @@
 
             </LinearLayout>
 
-        </androidx.cardview.widget.CardView>
+        </FrameLayout>
 
     </LinearLayout>
 
