--- a/app/src/main/res/layout/custom_income_recycler_view_item.xml
+++ b/app/src/main/res/layout/custom_income_recycler_view_item.xml
@@ -3,14 +3,17 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:layout_marginBottom="15sp">
+    android:layout_marginBottom="15sp"
+    android:padding="10dp"
+    android:background="@drawable/custom_view_holder_7">
 
     <ImageView
         android:id="@+id/incomeTypeImage"
         android:layout_width="42dp"
         android:layout_height="42dp"
-        android:layout_marginStart="15dp"
-        android:src="@drawable/crypto"/>
+        android:layout_marginStart="25dp"
+        android:src="@drawable/crypto"
+        android:layout_centerVertical="true"/>
 
     <TextView
         android:id="@+id/incomeTypeList"
@@ -32,13 +35,18 @@
         android:layout_centerVertical="true"
         android:text="Amount" />
 
-    <Button
+    <ImageView
         android:id="@+id/deleteIncomeItemBtn"
-        android:layout_width="60sp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="320dp"
-        android:text="X"
+        android:layout_width="64sp"
+        android:layout_height="40dp"
+        android:layout_marginStart="25dp"
+        android:layout_marginEnd="30dp"
+        android:layout_centerVertical="true"
+        android:layout_toEndOf="@+id/incomeAmount"
+        android:src="@drawable/bin"
         android:textSize="20sp"
-        android:textStyle="bold"/>
+        android:textStyle="bold"
+        android:padding="5dp"
+        android:background="@drawable/custom_button"/>
 
 </RelativeLayout>
