--- a/app/src/main/res/layout/custom_navigation_drawer.xml
+++ b/app/src/main/res/layout/custom_navigation_drawer.xml
@@ -190,10 +190,11 @@
         </LinearLayout>
 
         <View
-            android:layout_width="match_parent"
+            android:layout_width="310dp"
             android:layout_height="3dp"
             android:layout_marginTop="16dp"
-            android:background="@color/black"/>
+            android:layout_gravity="center_horizontal"
+            android:background="@drawable/custom_view_holder"/>
 
         <TextView
             android:layout_width="match_parent"
