--- a/app/src/main/res/layout/custom_profile_extra_user_recyclerview_item.xml
+++ b/app/src/main/res/layout/custom_profile_extra_user_recyclerview_item.xml
@@ -3,7 +3,8 @@
     android:layout_width="match_parent"
     android:layout_height="50dp"
     android:layout_marginTop="5dp"
-    android:layout_marginBottom="5dp">
+    android:layout_marginBottom="5dp"
+    android:background="@drawable/custom_view_holder_7">
 
     <TextView
         android:id="@+id/addedUserNumber"
@@ -22,16 +23,16 @@
         android:hint="Enter a name"
         android:layout_toRightOf="@+id/addedUserNumber"/>
 
-    <Button
+    <ImageView
         android:id="@+id/addedUserDeleteButton"
-        android:layout_width="90dp"
-        android:layout_height="45dp"
-        android:layout_marginEnd="5dp"
+        android:layout_width="70dp"
+        android:layout_height="50dp"
+        android:layout_margin="5dp"
         android:layout_marginStart="25dp"
-        android:text="X"
-        android:textAlignment="center"
-        android:textSize="16sp"
+        android:src="@drawable/bin"
         android:layout_centerVertical="true"
-        android:layout_toRightOf="@id/addedUserName"/>
+        android:layout_toEndOf="@id/addedUserName"
+        android:padding="5dp"
+        android:background="@drawable/custom_button"/>
 
 </RelativeLayout>
