--- a/app/src/main/res/layout/custom_region_setting_currency_spinner_item.xml
+++ b/app/src/main/res/layout/custom_region_setting_currency_spinner_item.xml
@@ -5,7 +5,8 @@
     android:layout_height="wrap_content"
     android:orientation="horizontal"
     android:paddingStart="16dp"
-    android:paddingEnd="16dp">
+    android:paddingEnd="16dp"
+    android:background="@drawable/custom_view_holder_7">
 
     <TextView
         android:id="@+id/regionSettingsFullCurrencyName"
