--- a/app/src/main/res/layout/custom_settings_item.xml
+++ b/app/src/main/res/layout/custom_settings_item.xml
@@ -3,7 +3,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:padding="16dp">
+    android:padding="16dp"
+    android:background="@drawable/custom_view_holder_7">
 
     <TextView
         android:id="@+id/settingsTitleTextView"
@@ -15,6 +16,6 @@
         android:id="@+id/subSettingsRecyclerView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:visibility="gone" />
+        android:visibility="gone"/>
 
 </LinearLayout>
