--- a/app/src/main/res/layout/fragment_region_settings.xml
+++ b/app/src/main/res/layout/fragment_region_settings.xml
@@ -17,11 +17,10 @@
         android:layout_marginEnd="25dp"
         tools:ignore="UselessParent">
 
-        <androidx.cardview.widget.CardView
+        <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            app:cardCornerRadius="50dp"
-            android:background="@color/white"
+            android:background="@drawable/custom_view_holder_2"
             android:layout_gravity="center">
 
             <LinearLayout
@@ -61,7 +60,8 @@
                     android:layout_height="50dp"
                     android:layout_marginStart="25dp"
                     android:layout_marginTop="15dp"
-                    android:layout_marginEnd="25dp" />
+                    android:layout_marginEnd="25dp"
+                    android:background="@drawable/custom_view_holder_7"/>
 
                 <TextView
                     android:layout_width="match_parent"
@@ -79,15 +79,17 @@
                     android:layout_height="50dp"
                     android:layout_marginStart="25dp"
                     android:layout_marginTop="15dp"
-                    android:layout_marginEnd="25dp" />
+                    android:layout_marginEnd="25dp"
+                    android:background="@drawable/custom_view_holder_7"/>
 
-                <Button
+                <androidx.appcompat.widget.AppCompatButton
                     android:id="@+id/userRegionSubmitButton"
                     android:layout_width="125dp"
                     android:layout_height="55dp"
                     android:layout_gravity="center"
                     android:layout_marginTop="30dp"
-                    android:text="Submit" />
+                    android:text="Submit"
+                    android:background="@drawable/custom_button"/>
 
                 <TextView
                     android:layout_width="match_parent"
@@ -101,7 +103,7 @@
 
             </LinearLayout>
 
-        </androidx.cardview.widget.CardView>
+        </FrameLayout>
 
     </FrameLayout>
 
